--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<a href="engelsk.html"><img class="knapp" src="images/EN_white.png" alt="English"></a>
 						</td>
                         <td>
-                        	<img id="storKnappJs1" class="knapp" src="images/Text_size_white.png" onclick="fontFunctionStor()" alt="Text size">
+                        	<img id="storKnappJs1" class="knapp" src="images/Text_size_white.png" onclick="fontFunctionStor()" onkeypress="fontFunctionStor()" alt="Text size">
                             <a href="norskStor.html" id="storKnapp1"><img class="knapp" src="images/Text_size_white.png"  alt="Text size"></a>
                         </td>
 					</tr>
@@ -74,7 +74,7 @@
 							<a href="engelsk.html"><img class="knapp" src="images/EN_white.png" alt="English"></a>
 						</td>
                         <td>
-                            <img id="storKnappJs2" class="knapp" src="images/Text_size_white.png" alt="Text size" onclick="fontFunctionStor()" >
+                            <img id="storKnappJs2" class="knapp" src="images/Text_size_white.png" alt="Text size" onclick="fontFunctionStor()" onkeypress="fontFunctionStor()">
                             <a href="norskStor.html" id="storKnapp2"><img class="knapp" src="images/Text_size_white.png" alt="Text size"></a>
                         </td>
   					</tr>
