--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                             <h2>Løsning</h2>
 							<p id="skriftS2">
 								Å løse problemet med politisk polarisering vil ta flere år, om det er mulig i det hele tatt. Uten å gå inn i ytterligere detaljer, er det mange teorier om hva det er som skiller oss så mye (Layman et al., 2006). Det er sammenhengen mellom nyheter og politisk polarisering som vi ønsket å gjøre noe med.
-								<br><br>
+								<br><br><br><br>
 								Et problem med dagens nyhetsbilde, spesielt etter Trumps «fake news», er vår tillit til nyhetene. Ifølge The Digital News Report of 2018 er over halvparten av verdens befolkning bekymret for at nyhetene de leser er falske. 51% sier at de stoler på nyhetene de oppsøker selv, mens bare 23% stoler på nyhetene de kommer over i sosiale medier. Land med polariserte politiske institusjoner og høy bruk av sosiale medier skiller seg ut. I Spania er så mange som 69% bekymret for falske nyheter, og ikke langt bak finner vi USA med 64%  (Newman, 2018).
-								<br><br>
+								<br><br><br><br>
 								Et annet problem er at folk kan bestemme nøyaktig hvilke nyhetskilder de har lyst til å lese uten at de trenger å forholde seg til andre nyhetskilder og dermed politisk informasjon. Det er ikke til å feie under et teppe at de fleste nyhetssider har en eller annen politisk agenda, eller er påvirket av politikken på et eller annet vis. Vi har også en tendens til å søke politisk informasjon som vi er enig (Croft, 2016). La oss ta det høyrevridde nyhetsbyrået Breitbart som et eksempel. Deltakere i Reuters-undersøkelsen vurderte Breitbart til den minst pålitelige nyhetskilden med en poengsum på 3,69 av 10. Samtidig, blant folk som bruker Breitbart regelmessig, er poengsummen 6,96 (Newman, 2018). 
 							</p>
                         </div>
@@ -134,9 +134,9 @@
                             	<br class="breaks"><br class="breaks"><br class="breaks"><br class="breaks">
 	                            Det er med andre ord en klar sammenheng mellom politisk polarisering og polarisering i nyhetene. Bedre fakta og mer åpenhet alene er ikke nok til å få folk til å stole på nyheten, vi må presentere ulike meninger og perspektiver på sakene (Newman, 2018). Vår løsning på polariseringsproblemet er en app som gjør akkurat det, den samler forskjellige nyhetskilder på ett og samme sted, og på den måten skaper vi en plattform der det er mange forskjellige meninger og perspektiver på sakene.
 	                        </p>
-							<h5><em>
+							<h5><em><br>
 							“To support bipartisanship, it is important to support media that actively try to reach out fairly to both sides of the aisle and promote understanding between different political ideologies.” (Tadepalli, 2017)
-							</em></h5>
+							</em></h5><br>
 	                        <p id="skriftS4">
 	                       		Vår løsning på problemet fokuserer på det teknologiske og sosiale medie aspektet av nyheter, og ikke så mye på områder som ikke blir påvirket av smarttelefoner i like stor kraft. Men som nevnt tidligere, er problemet relatert til og muligens laget av den stadig økende nyhetsstrømmen, som vi også kan spore tilbake til begynnelsen av smarttelefoner (Prebensen, 2018). Løsningen vår går derfor til kjernen av problemet og prøver å gjøre endring før polariseringen blir enda større.
 	                         </p>
@@ -152,7 +152,7 @@
                             <h2>Appen</h2>
 					<p id="skriftS5">
 						Néa er en ny innovativ app som samler nyheter fra forskjellige nyhetskilder og gjør det enklere for deg å få en komplett oversikt over nyhetssituasjonen. Du kan selv velge om du vil se nyhetsartikler fra hele verden eller fra spesifikke land. Vårt mål er å presentere ulike synspunkter på både viktige samfunnsrelaterte problemer og mindre nyheter på begge sider av det politiske spekteret, slik at du kan gjøre deg opp din egen mening. Appen er politisk uavhengig og har en kunstig intelligens med spesialutviklede algoritmer som filtrerer ut falske nyheter og kategoriserer artiklene. Den kunstige intelligensen oversetter også nyhetene for deg dersom du har valgt å se nyheter fra andre land. Appen gir deg også mulighet til å “følge” saker slik at du kan få varsler når det blir publisert nye artikler angående den aktuelle saken.
-                        <br><br>
+                        <br><br><br><br>
                         På forsiden utforsker man nyhetsartikler som er sortert etter enten tid eller tema, man kan også velge fra “I vinden”, som er saker det blir skrevet mye om i media. Man kan også søke etter spesifikke artikler eller saker. Under “tid” blir man presentert med artikler som er sortert kronologisk, slik at man kan lese seg opp på de siste nyhetene eller velge å lese saker fra egendefinerte tidsperioder. Når man velger tema blir innholdet delt i kategorier og underkategorier. F.eks politikk, sport, kultur osv. Hvis du trykker på en spesifikk sak, for eksempel Fregatten, får du opp alle artikler som er skrevet om denne saken sortert etter tid. Om en av artiklene ser interessant ut, kan du trykke på den for å få et kort sammendrag om den og mulighet til å trykke på “les mer” for å lese hele saken.
 					</p>
                             
@@ -193,7 +193,7 @@
 	<div class="listeDiv">
 		<ul>
 			<li class="kildeliste"><a ref="Kildeliste.pdf" target="_blank">Kildeliste</a></li>
-				<br>
+				<br class="breaks">
 			<li class="designmanual"><a href="Design_manual.pdf" target="_blank">Designmanual</a></li>
 		</ul>
     </div>
