siste mandag med fungerende bilder på alle sider

--- a/engelsk_ss.html
+++ b/engelsk_ss.html
@@ -166,7 +166,7 @@
                             
                         </div>
                         <div class="appDiv">
-                        <img name="appBilde" width="200px" class="appBilder" alt="The app NeA" id="jsAppBilde">
+                        <img name="appBilde2" width="200px" class="appBilder" alt="The app NeA" id="jsAppBilde2">
                             <div class="noJsBilder">
                             <img src="images/App_eng_1.png" id="noJsBilde1" width="150px" alt="Image of App frontpage" >
                             <img src="images/App_eng_2.png" id="noJsBilde2" width="150px" alt="Image of case timeline">
