--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="script.js">
+    
+    </script>
 
 	
 </head>
