late night fix 2.0

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<tr class="navbar">
 						<td>
                             <span class="dropdown">
-  								<img class="dropbtn" tabindex="1" src="images/Hamburger_white.png" alt="Menu" tabindex="1" onclick="dropdownFunction()" onkeypress="dropdownFunction()">
+  								<img class="dropbtn" tabindex="1" src="images/Hamburger_white.png" alt="Menu" onclick="dropdownFunction()" onkeypress="dropdownFunction()">
   								<span id="ddContent" class="dropdown-content" >
    								 	<ul>
    								 		<li><a href="#hjem" tabindex="2" onclick="dropdownFunction()" class="dropdownTekst">Til Toppen</a></li>
@@ -64,8 +64,7 @@
   							</span>			
 						</td>
 						<td>
-							<a href="norsk_ss.html" tabindex="8"><img class="knapp" src="images/Style_white.png" alt="Høykontrast"></a>
-							
+							<a href="norsk_ss.html" tabindex="8"><img class="knapp" src="images/Style_white.png" alt="Høykontrast"></a>	
   						</td>
   						<td>
 							<a href="engelsk.html" tabindex="9"><img class="knapp" src="images/EN_white.png" alt="English"></a>
@@ -151,7 +150,7 @@
                 <img name="appBilde" width="200px" class="appBilder" alt="Appen NeA" id="jsAppBilde">
 	            <div class="noJsBilder">
 			        <img src="images/App_no_1.png" id="noJsBilde1" width="150px" alt="Bilde av appens forside" >
-			         <img src="images/App_no_2.png" id="noJsBilde2" width="150px" alt="Bilde av appens tidslinje">
+			        <img src="images/App_no_2.png" id="noJsBilde2" width="150px" alt="Bilde av appens tidslinje">
 			        <img src="images/App_no_3.png" id="noJsBilde3" width="150px" alt="Bilde av forstørret nyhetssak">
                 </div>
             </div>
@@ -180,9 +179,9 @@
 <footer class="grid-containerFooter footer">
 	<div class="listeDiv">
 		<ul>
-			<li class="kildeliste"><a tabindex="19" ref="Kildeliste.pdf" target="_blank">Kildeliste</a></li>
+			<li class="kildeliste"><a tabindex="19" href="Kildeliste.pdf" target="_blank">Kildeliste</a></li>
 			<br class="breaks">
-			<li class="designmanual"><a href="Design_manual.pdf" tabindex="20" target="_blank">Designmanual</a></li>
+			<li class="designmanual"><a tabindex="20" href="Design_manual.pdf" target="_blank">Designmanual</a></li>
 		</ul>
     </div>
 	<div class="someDiv">
@@ -203,4 +202,3 @@
 	</div>
 </footer>
 </html>
-
