engelsk style stor done + småfiks på engelsk ss

--- a/engelsk_ss.html
+++ b/engelsk_ss.html
@@ -37,7 +37,7 @@
 							<a href="norsk_ss.html" tabindex="7"><img class="knapp" src="images/NO_yellow.png" alt="Norsk"></a>
 						</td>
                         <td>
-                        	<img id="storKnappJs1" class="knapp" tabindex="8" src="images/Text_size_yellow.png" onclick="fontFunctionStor()" alt="Text size">
+                        	<img id="storKnappJs1" class="knapp" tabindex="8" src="images/Text_size_yellow.png" onclick="fontFunctionStor()" onkeypress="fontFunctionStor()" alt="Text size">
                             <a href="engelsk_style_Stor.html" id="storKnapp1" tabindex="8"><img class="knapp" src="images/Text_size_yellow.png"  alt="Text size"></a>
                         </td>
 					</tr>
@@ -70,7 +70,7 @@
 							<a href="norsk_ss.html" tabindex="9"><img class="knapp" src="images/NO_yellow.png" alt="Norwegian language"></a>
 						</td>
                         <td>
-                            <img id="storKnappJs2" class="knapp" tabindex="10" src="images/Text_size_yellow.png" alt="Text size" onclick="fontFunctionStor()" >
+                            <img id="storKnappJs2" class="knapp" tabindex="10" src="images/Text_size_yellow.png" alt="Text size" onclick="fontFunctionStor()" onkeypress="fontFunctionStor()">
                             <a href="engelsk_style_Stor.html" id="storKnapp2" tabindex="11"><img class="knapp" src="images/Text_size_yellow.png" alt="Text size"></a>
                         </td>
   					</tr>
@@ -97,7 +97,7 @@
                 </h3>              
 				<img src="images/polarizationgif.gif" class="gif" alt="The polarization of the american public between 1994-2014">	       
             </div>
-            <div >
+            <div>
                 <p id="skriftS">                
 					Western, and especially US politics have become increasingly polarized in recent years (Azzimonti, 2013). A population grouped into different clusters, each with members with dissimilar attributes, is polarized (Esteban & Ray, 1994).The graph on the right shows how political opinions in the public have changed to the more extreme over the years (Doherty, 2014).
 				    <br><br><br>
@@ -181,7 +181,7 @@
 		<ul>
 			<li class="kildeliste"><a tabindex="19" href="Kildeliste.pdf" target="_blank">Reference List</a></li>
 			<br class="breaks">
-			<li class="designmanual"><a tabindex="20" href="Design_manual_test.pdf" target="_blank">Design Manual</a></li>
+			<li class="designmanual"><a tabindex="20" href="Design_manual.pdf" target="_blank">Design Manual</a></li>
 		</ul>
 	</div>
 	<div class="someDiv"> 
