--- a/engelskStor.html
+++ b/engelskStor.html
@@ -70,7 +70,7 @@
 							<a href="norskStor.html" tabindex="9"><img class="knapp" src="images/NO_white.png" alt="Norsk"></a>
 						</td>
                         <td>
-                            <img id="storKnappJs2" class="knapp" tabindex="10" src="images/Text_size_white.png" alt="Text size" onclick="fontFunctionStor()" onkeypress="fontFunctionStor()>
+                            <img id="storKnappJs2" class="knapp" tabindex="10" src="images/Text_size_white.png" alt="Text size" onclick="fontFunctionStor()" onkeypress="fontFunctionStor()">
                             <a href="engelsk.html" id="storKnapp2" tabindex="11"><img class="knapp" src="images/Text_size_white.png" alt="Text size"></a>
                         </td>
   					</tr>
