--- a/engelskStor.html
+++ b/engelskStor.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>English frontpage large text size</title>
+	<title>NéA English frontpage large text</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
