--- a/engelsk.html
+++ b/engelsk.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>english frontpage</title>
+	<title>NéA English Frontpage</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
