--- a/engelsk_ss.html
+++ b/engelsk_ss.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>English alternativ</title>
+	<title>NéA English Highcontrast</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="stylesheet_alternativt.css">
