--- a/engelsk_style_Stor.html
+++ b/engelsk_style_Stor.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>English high contrast large textsize</title>
+	<title>NéA English high contrast large textsize</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="stylesheet_alternativt.css">
