--- a/norsk_style_Stor.html
+++ b/norsk_style_Stor.html
@@ -2,7 +2,7 @@
 <html lang="no">
 
 <head>
-	<title>Norsk høy kontrast stor størrelse</title>
+	<title>NéA Høy Kontrast stor størrelse</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="stylesheet_alternativt.css">
