--- a/index.html
+++ b/index.html
@@ -165,8 +165,18 @@
                 </p>
             </div>
        		<div>
+                <img src="images/OmOss_Firkanta_Jostein.png" width="200px" alt="Bilde av Jostein Hauge">	
+                <img src="images/OmOss_Firkanta_Fredrik.png" width="200px" alt="Bilde av Fredrik Randers">	
+                <img src="images/OmOss_Firkanta_Jorgen.png" width="200px" alt="Bilde av Jørgen Huseby">	
+                <img src="images/OmOss_Firkanta_Elin.png" width="200px" alt="Bilde av Elin Holde">
             	<p id="skriftS7">
                     Elin Holde  Studentnummer: s333939
+                </p>
+                <img src="images/OmOss_Rund_Jostein.png" width="200px" alt="Bilde av Jostein Hauge">	
+                <img src="images/OmOss_Rund_Fredrik.png" width="200px" alt="Bilde av Fredrik Randers">	
+                <img src="images/OmOss_Rund_Jorgen.png" width="200px" alt="Bilde av Jørgen Huseby">	
+                <img src="images/OmOss_Rund_Elin.png" width="200px" alt="Bilde av Elin Holde">
+                <p>
 					Jørgen Huseby  Studentnummer: s333932
 					Fredrik Randers  Studentnummer: s333919
 					Jostein Hauge  Studentnummer: s333943
