--- a/engelskStor.html
+++ b/engelskStor.html
@@ -34,7 +34,7 @@
 							<a href="engelsk_style_Stor.html" tabindex="6"><img class="knapp" src="images/Style_white.png" alt="High Contrast"></a>
 						</td>
 						<td>
-							<a href="norskStor.html" tabindex="7"><img class="knapp" src="images/NO_white.png" alt="Norsk"></a>
+							<a href="norskStor.html" tabindex="7"><img class="knapp" src="images/NO_white.png" alt="Norwegian"></a>
 						</td>
                         <td>
                         	<img id="storKnappJs1" class="knapp" tabindex="8" src="images/Text_size_white.png" onclick="fontFunctionStor()" onkeypress="fontFunctionStor()" alt="Text size">
@@ -67,7 +67,7 @@
 							<a href="engelsk_style_Stor.html" tabindex="8"><img class="knapp" src="images/Style_white.png" alt="High Contrast" ></a>	
   						</td>
   						<td>
-							<a href="norskStor.html" tabindex="9"><img class="knapp" src="images/NO_white.png" alt="Norsk"></a>
+							<a href="norskStor.html" tabindex="9"><img class="knapp" src="images/NO_white.png" alt="Norwegian"></a>
 						</td>
                         <td>
                             <img id="storKnappJs2" class="knapp" tabindex="10" src="images/Text_size_white.png" alt="Text size" onclick="fontFunctionStor()" onkeypress="fontFunctionStor()">
