--- a/engelsk_ss.html
+++ b/engelsk_ss.html
@@ -34,7 +34,7 @@
 							<a href="engelsk.html" tabindex="6"><img class="knapp" src="images/Style_yellow.png" alt="normal style"></a>
 						</td>
 						<td>
-							<a href="norsk_ss.html" tabindex="7"><img class="knapp" src="images/NO_yellow.png" alt="Norsk"></a>
+							<a href="norsk_ss.html" tabindex="7"><img class="knapp" src="images/NO_yellow.png" alt="Norwegian"></a>
 						</td>
                         <td>
                         	<img id="storKnappJs1" class="knapp" tabindex="8" src="images/Text_size_yellow.png" onclick="fontFunctionStor()" onkeypress="fontFunctionStor()" alt="Text size">
@@ -67,7 +67,7 @@
 							<a href="engelsk.html" tabindex="8"><img class="knapp" src="images/Style_yellow.png" alt="Normal style" ></a>		
   						</td>
   						<td>
-							<a href="norsk_ss.html" tabindex="9"><img class="knapp" src="images/NO_yellow.png" alt="Norwegian language"></a>
+							<a href="norsk_ss.html" tabindex="9"><img class="knapp" src="images/NO_yellow.png" alt="Norwegian"></a>
 						</td>
                         <td>
                             <img id="storKnappJs2" class="knapp" tabindex="10" src="images/Text_size_yellow.png" alt="Text size" onclick="fontFunctionStor()" onkeypress="fontFunctionStor()">
