lagt inn kildelista

--- a/norskStor.html
+++ b/norskStor.html
@@ -179,7 +179,7 @@
 <footer class="grid-containerFooter footer">
 	<div class="listeDiv">
 		<ul>
-			<li class="kildeliste"><a tabindex="19" href="Kildeliste.pdf" target="_blank">Kildeliste</a></li>
+			<li class="kildeliste"><a tabindex="19" href="Reference_List.pdf" target="_blank">Kildeliste</a></li>
 			<br class="breaks">
 			<li class="designmanual"><a tabindex="20" href="Design_manual.pdf" target="_blank">Designmanual</a></li>
 		</ul>
