om oss mekk på alle sider

--- a/engelsk_ss.html
+++ b/engelsk_ss.html
@@ -159,18 +159,29 @@
 
 	<a name="omoss" tabindex="18">
         <div class ="grid-container tekstboks4">
-        	<div>
+            <div class="Elin">
+            	<img src="images/OmOss_Rund_Elin.png" width="200px" alt="Bilde av Elin Holde">
 				<p id="skriftS6">
-					Pictures of us:
+                    Elin Holde <br> Studentnummer: s333939
                 </p>
             </div>
-            <div>
-                <p id="skriftS7">
-                    Elin Holde  Studentnummer: s333939
-					Jørgen Huseby  Studentnummer: s333932
-					Fredrik Randers  Studentnummer: s333919
-					Jostein Hauge  Studentnummer: s333943
-				</p>
+            <div class="Fredrik">
+            	<img src="images/OmOss_Rund_Fredrik.png" width="200px" alt="Bilde av Fredrik Randers">
+            	<p id="skriftS7">
+            		Fredrik Thorsen <br> Studentnummer: s333919
+            	</p>
+            </div>
+            <div class="Jørgen">
+            	<img src="images/OmOss_Rund_Jorgen.png" width="200px" alt="Bilde av Jørgen Huseby">
+            	<p id="skriftS8">
+            		Jørgen Huseby <br> Studentnummer: s333932
+            	</p>
+            </div>
+            <div class="Jostein">
+            	<img src="images/OmOss_Rund_Jostein.png" width="200px" alt="Bilde av Jostein Hauge">
+            	<p id="skriftS9">
+            		Jostein Hauge <br> Studentnummer: s333943
+            	</p>
             </div>
         </div>
 	</a>		
