--- a/engelskStor.html
+++ b/engelskStor.html
@@ -158,19 +158,30 @@
 	</a>
 
 	<a name="omoss" tabindex="18">
-        <div class ="grid-container tekstboks4">
-            <div>
-				<p id="skriftS6">
-					Pictures of us:
+       <div class ="grid-container tekstboks4">
+            <div class="Elin">
+            	<img src="images/OmOss_Rund_Elin.png" width="200px" alt="Bilde av Elin Holde">
+				<p class="storSkrift">
+                    Elin Holde <br> Studentnummer: s333939
                 </p>
             </div>
-        	<div>
-                <p class="storSkrift">
-                    Elin Holde  Studentnummer: s333939
-					Jørgen Huseby  Studentnummer: s333932
-					Fredrik Randers  Studentnummer: s333919
-					Jostein Hauge  Studentnummer: s333943
-				</p>
+            <div class="Fredrik">
+            	<img src="images/OmOss_Rund_Fredrik.png" width="200px" alt="Bilde av Fredrik Randers">
+            	<p class="storSkrift">
+            		Fredrik Thorsen <br> Studentnummer: s333919
+            	</p>
+            </div>
+            <div class="Jørgen">
+            	<img src="images/OmOss_Rund_Jorgen.png" width="200px" alt="Bilde av Jørgen Huseby">
+            	<p class="storSkrift">
+            		Jørgen Huseby <br> Studentnummer: s333932
+            	</p>
+            </div>
+            <div class="Jostein">
+            	<img src="images/OmOss_Rund_Jostein.png" width="200px" alt="Bilde av Jostein Hauge">
+            	<p class="storSkrift">
+            		Jostein Hauge <br> Studentnummer: s333943
+            	</p>
             </div>
         </div>
 	</a>
