--- a/norsk_ss.html
+++ b/norsk_ss.html
@@ -163,7 +163,8 @@
                 <div class="portrettBilder">
             		<img src="images/OmOss_Rund_Elin.png" width="200px" alt="Bilde av Elin Holde">
                 	<p id="skriftS6">  Elin Holde <br> Studentnummer: s333939
-                	</p></div>
+                	</p>
+                </div>
                 <div class="portrettBilder">
                 	<img src="images/OmOss_Rund_Jorgen.png" width="200px" alt="Bilde av Jørgen Huseby" >
 					<p id="skriftS8">Jørgen Huseby <br> Studentnummer: s333982
@@ -175,7 +176,7 @@
             		<img src="images/OmOss_Rund_Fredrik.png" width="200px" alt="Bilde av Fredrik Randers" >
 					<p id="skriftS7">Fredrik Thorsen <br> Studentnummer: s333919
             		</p>
-                	/div>
+                </div>
                 <div class="portrettBilder">
                 	<img src="images/OmOss_Rund_Jostein.png" width="200px" alt="Bilde av Jostein Hauge" >
 					<p id="skriftS9">Jostein Hauge <br> Studentnummer: s333943
@@ -185,6 +186,7 @@
         </div>
 	</a>		
 </body>
+
 
 <footer class="grid-containerFooter footer">
 	<div class="listeDiv">
