--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             		<img src="images/OmOss_Rund_Fredrik.png" width="200px" alt="Bilde av Fredrik Randers" >
 					<p id="skriftS7">Fredrik Thorsen <br> Studentnummer: s333919
             		</p>
-                	/div>
+                	</div>
                 <div class="portrettBilder">
                 	<img src="images/OmOss_Rund_Jostein.png" width="200px" alt="Bilde av Jostein Hauge" >
 					<p id="skriftS9">Jostein Hauge <br> Studentnummer: s333943
