--- a/engelsk_style_Stor.html
+++ b/engelsk_style_Stor.html
@@ -162,24 +162,24 @@
             <div class="Elin" >
                 <div class="portrettBilder">
             		<img src="images/OmOss_Rund_Elin.png" width="200px" alt="Picture of Elin Holde">
-                	<p id="skriftS6">  Elin Holde <br> Student id: s333939
+                	<p class="storSkrift">  Elin Holde <br> Student id: s333939
                 	</p>
                 </div>
             	<div class="portrettBilder">
         			<img src="images/OmOss_Rund_Jorgen.png" width="200px" alt="Picture of Jørgen Huseby" >
-            		<p id="skriftS8">Jørgen Huseby <br> Student id: s333982
+            		<p class="storSkrift">Jørgen Huseby <br> Student id: s333982
             		</p>
                 </div>
             </div>
             <div class="Fredrik">
                 <div class="portrettBilder">
             		<img src="images/OmOss_Rund_Fredrik.png" width="200px" alt="Picture of Fredrik Randers" >
-					<p id="skriftS7">Fredrik Thorsen <br> Student id: s333919
+					<p class="storSkrift">Fredrik Thorsen <br> Student id: s333919
             		</p>
                 </div>
                 <div class="portrettBilder">
                 	<img src="images/OmOss_Rund_Jostein.png" width="200px" alt="Picture of Jostein Hauge" >
-            		<p id="skriftS9">Jostein Hauge <br> Student id: s333943
+            		<p class="storSkrift">Jostein Hauge <br> Student id: s333943
             		</p>
                 </div>
             </div> 
